# NowPlayingDisplay

./: .gitignore  LICENSE  audio_capture.py  kiosk.py  main.py  music_dectector.py  now_playing_native.py  now_playing_web.py  nowplaying.service  nputils.py  pyproject.toml  recognizer.py  run.sh  shazam_models.py  viewmodels.py
www/: index.html
