[project]
name = "nowplayingdisplay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ffmpeg>=1.4",
    "flask>=3.1.2",
    "flask-pydantic>=0.13.2",
    "httpx>=0.28.1",
    "librosa>=0.11.0",
    "musicbrainzngs>=0.7.1",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "pygame>=2.6.1",
    "python-dotenv>=1.2.1",
    "pywebview>=6.1",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "shazamio>=0.8.1",
    "sounddevice>=0.5.3",
    "thefuzz>=0.22.1",
    "upnpclient>=1.0.3",
    "xmltodict>=1.0.2",
]
